appointments booked with the web service will now set appointment name based on demographic number.